tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__LootGames-AAAAAAAAAAAAAAAAAAALPA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2876,
  "prerequisites": [
    2875
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It looks like you've found a secret room hidden...not so deep within the earth. Pretty close to the surface, actually. You can find these all over the place, and have a chance at sweet sweet loot if you're good at simon says. It counts the highest level you completed, so you can fail the other rounds on purpose to go faster if you don't think you can do better. BTW, cheaters go to minecraft hell, where all the blocks have hardness -1.\n\nIf you fail with Minesweeper, it blows up. Be sure to make room for escape!\n\nMake sure that no water or oil is flowing into the room because of worldgen, or it will kill you and destroy your grave because of 'cheating'. This is a bug.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lLoot Games",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "SECRET"
  },
  "required_prerequisites": [
    2875
  ],
  "rewards": [],
  "tasks": []
}
