tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__MakingBetterTool-AAAAAAAAAAAAAAAAAAAAJg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 38,
  "prerequisites": [
    35,
    1866,
    30
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With zinc and copper, you can create a material with a higher melting temperature - Brass - which can be used to cast better tools.\n\nFor that, you need a smeltery. See the Multiblock Goals tab for details. You can also grab some extra blocks from some villages, but they don't count towards the quest.\n\nAlternatively, there are also one-time-use clay casts available.\n\nYou can then use your fancy bronze to make better tools with a higher mining level.\n\nRemember, you need to use the pickaxe a bit to gather mining XP if you want the full mining level on your bronze pickaxe. Certain tool upgrades can give that directly if you have an upgrade slot available.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lMaking Better Tools",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    35,
    1866,
    30
  ],
  "rewards": [],
  "tasks": []
}
