tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__Malachite-AAAAAAAAAAAAAAAAAAAB4A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 480,
  "prerequisites": [
    474
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Another copper source is \"malachite\" which can be found between Y 10-40. This vein contains more iron ore variants like \"brown limonite\", \"yellow limonite\" and \"banded iron ore\".\n\nTo see where an ore can be found, click the raw ore in NEI, and it will show you more details. Works with small ores too.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lMalachite",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    474
  ],
  "rewards": [],
  "tasks": []
}
