tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__NoSelfHealingToo-AAAAAAAAAAAAAAAAAAAHSA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1864,
  "prerequisites": [
    38
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In this pack you have to first gain expertise in Thaumcraft to craft the Tinker's Construct Ball of Moss. Go and become a dangerous wizard, and you'll gain the power needed to craft the Ball of Moss and make your tools heal themselves. Of course, you need to get to the Twilight Forest and get some aluminium ingots before you can begin. The Ball of Moss is in the GTNH tab of the Thaumonomicon, and requires infusion. There are many other great things in the Thaumonomicon, but be wary of warp.\n\nHave a beer to prepare for your long journey.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lNo Self-Healing Tools Here...Yet",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    38
  ],
  "rewards": [],
  "tasks": []
}
