tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__OptionsForFindin-AAAAAAAAAAAAAAAAAAAHSg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1866,
  "prerequisites": [
    474
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It can be hard to find Zinc Gravel Ore on old servers or unlucky world seeds.\n\nThe alternatives are:\n- Buy the Zinc Gravel Ore in the Coins, Coins, Coins tab,\n- Search for Small Zinc Ore in the overworld,\n- Use the recipe with XP buckets in a crafting table.\n\nOnce you reach LV, you can get zinc from processing various ores like antimony, sphalerite, tetrahedrite and tin.\nCheck NEI for more options.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lOptions For Finding Zinc",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    474
  ],
  "rewards": [],
  "tasks": []
}
